--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@ h1 {
 
 * {
   margin: 0;
+  box-sizing: border-box;
 }
 button {
   border-radius: 8px;
@@ -63,19 +64,6 @@ button:focus-visible {
   margin: 0 auto;
 }
 
-.container > div {
-  border: 1px solid grey;
-  border-radius: 5px;
-  width: 100%;
-  max-width: 600px;
-  margin: 30px auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
-  gap: 10px;
-}
 .navbar {
   display: flex;
   justify-content: space-between;
