--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,9 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
-a:hover {
-  color: #535bf2;
+a:hover,
+.form-btn:hover {
+  color: white;
 }
 
 body {
