--- a/src/Components/LoginComponent/LoginForm.css
+++ b/src/Components/LoginComponent/LoginForm.css
@@ -3,7 +3,7 @@
   color: rgb(61, 59, 59);
   width: 95%;
   max-width: 600px;
-  padding: 10px;
+  padding: 30px 10px;
 }
 .login-form-input {
   width: 90%;
